--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  That is a funny joke!!!
+  Very clever!!!
 </p>
 
 </body>
